Linkando CSS na pagina principal

--- a/bio.html
+++ b/bio.html
@@ -4,6 +4,7 @@
 		<title>Biografia - Joao da Silva</title>
 		<link rel="icon" href="favicon.png">
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="bio.css">
 	</head>
 	<body>
 		<h1>Sobre mim</h1>
