Adicionando links na pagina

--- a/bio.html
+++ b/bio.html
@@ -26,12 +26,12 @@
 
 		<h2>Experiência</h2>
 
-		<p>Já desenvolvi projetos para grandes empresas como BMW, UOL e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.</p>
+		<p>Já desenvolvi projetos para grandes empresas como <a href="http://www.bmw.com">BMW<a>, <a href="http://www.uol.com.br">UOL</a> e <a href="http://www.ibm.com.br">IBM<a>. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.</p>
 
 		<p>Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
 
 		<h2>Comunidade</h2>
 
-		<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um blog.</p>
+		<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog<a>.</p>
 	</body>
 </html>
