--- a/bio.html
+++ b/bio.html
@@ -46,15 +46,17 @@
 			<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
 		</main>
 		<img src="eu.jpg">
-		<nav>
+		<aside>
 			<h1>João da Silva</h1>
-			<ul>
-				<li><a href="#">home</a></li>
-				<li><a href="#">portifilio</a></li>
-				<li><a href="#">sobre mim</a></li>
-				<li><a href="#">contato</a></li>
-			</ul>
-		</nav>
+			<nav>
+				<ul>
+					<li><a href="#">home</a></li>
+					<li><a href="#">portifilio</a></li>
+					<li><a href="#">sobre mim</a></li>
+					<li><a href="#">contato</a></li>
+				</ul>
+			</nav>
+		</aside>
 		<footer>
 			&copy; João da Silva 2018
 		</footer>
