--- a/bio.html
+++ b/bio.html
@@ -45,7 +45,7 @@
 
 			<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
 		</main>
-		<img src="eu.jpg">
+		<img src="eu.jpg" alt="Foto do Joao da Silva">
 		<aside>
 			<h1>João da Silva</h1>
 			<nav>
