Adcionando o reset.css

--- a/bio.html
+++ b/bio.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Biografia - Joao da Silva</title>
-		<link rel="icon" href="favicon.png">
 		<meta charset="utf-8">
+		<link rel="icon" href="favicon.png">
+		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="bio.css">
 		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 		<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
-		<!-- que é a única necessária para os cabeçalhos            -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 	</head>
 	<body>
