Inserindo imagens e links das redes sociais

--- a/bio.html
+++ b/bio.html
@@ -58,6 +58,11 @@
 					<li><a href="#">contato</a></li>
 				</ul>
 			</nav>
+			<ul>
+				<li><a href="https://github.com/victorscher"><img src="img/github.png" alt="GitHub"></a></li>
+				<li><a href="https://twitter.com/victorscherrr"><img src="img/twitter.png" alt="Twitter"></a></li>
+				<li><a href="https://linkedin.com/in/victorscher"><img src="img/linkedin.png" alt="linkedin"></a></li>
+			</ul>
 		</aside>
 		<footer>
 			&copy; João da Silva 2018
