--- a/bio.html
+++ b/bio.html
@@ -13,16 +13,16 @@
 	</head>
 	<body>
 		<main>
-			<h1>Sobre mim</h1>
+			<h1 class="titulo-principal">Sobre mim</h1>
 
-			<div>
+			<div class="conteudo">
 				<p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam</em> valor para meus clientes.</p>
 
 				<p>Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.</p>
 
 				<h2>Como trabalho</h2>
 
-				<blockquote>
+				<blockquote class="citacoes">
 					<p>	João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 					<cite>José Souza, Fiat</cite>
 				</blockquote>
@@ -33,7 +33,7 @@
 
 				<h2>Experiência</h2>
 
-				<blockquote>
+				<blockquote class="citacoes">
 					<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 					<cite>Manoel Santos, Petrobrás</cite>
 				</blockquote>
@@ -48,7 +48,7 @@
 			</div>
 		</main>
 		<img src="eu.jpg" alt="Foto do Joao da Silva">
-		<aside>
+		<aside id="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
 				<ul>
@@ -58,13 +58,13 @@
 					<li><a href="#">contato</a></li>
 				</ul>
 			</nav>
-			<ul>
+			<ul class="icones-sociais">
 				<li><a href="https://github.com/victorscher"><img src="img/github.png" alt="GitHub"></a></li>
 				<li><a href="https://twitter.com/victorscherrr"><img src="img/twitter.png" alt="Twitter"></a></li>
 				<li><a href="https://linkedin.com/in/victorscher"><img src="img/linkedin.png" alt="linkedin"></a></li>
 			</ul>
 		</aside>
-		<footer>
+		<footer id="rodape-pagina">
 			&copy; João da Silva 2018
 		</footer>
 	</body>
