--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
 
 				<h2>Como trabalho</h2>
 
-				<blockquote class="citacoes">
+				<blockquote class="citacoes fiat">
 					<p>	João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 					<cite>José Souza, Fiat</cite>
 				</blockquote>
@@ -33,7 +33,7 @@
 
 				<h2>Experiência</h2>
 
-				<blockquote class="citacoes">
+				<blockquote class="citacoes petrobras">
 					<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 					<cite>Manoel Santos, Petrobrás</cite>
 				</blockquote>
@@ -47,11 +47,11 @@
 				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto do Joao da Silva">
+		<img src="eu.jpg" alt="Foto do Joao da Silva" class="foto-principal">
 		<aside id="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
-				<ul>
+				<ul class="menu-navegacao">
 					<li><a href="#">home</a></li>
 					<li><a href="#">portifilio</a></li>
 					<li><a href="#">sobre mim</a></li>
@@ -59,9 +59,9 @@
 				</ul>
 			</nav>
 			<ul class="icones-sociais">
-				<li><a href="https://github.com/victorscher"><img src="img/github.png" alt="GitHub"></a></li>
-				<li><a href="https://twitter.com/victorscherrr"><img src="img/twitter.png" alt="Twitter"></a></li>
-				<li><a href="https://linkedin.com/in/victorscher"><img src="img/linkedin.png" alt="linkedin"></a></li>
+				<li><a class="github" href="https://github.com/victorscher">GitHub</a></li>
+				<li><a class="twitter" href="https://twitter.com/victorscherrr">Twitter</a></li>
+				<li><a class="linkedin" href="https://linkedin.com/in/victorscher">LinkedIn</a></li>
 			</ul>
 		</aside>
 		<footer id="rodape-pagina">
