--- a/bio.html
+++ b/bio.html
@@ -4,8 +4,8 @@
 	<title>Biografia - Joao da Silva</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="img/favicon.png">
-	<link rel="stylesheet" href="img/reset.css">
-	<link rel="stylesheet" href="img/bio.css">
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="bio.css">
 	<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 	<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
@@ -49,7 +49,7 @@
 			<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
 		</div>
 	</main>
-	<img src="eu.jpg" alt="Foto do Joao da Silva" class="foto-principal">
+	<img src="img/eu.jpg" alt="Foto do Joao da Silva" class="foto-principal">
 	<aside id="navegacao-site">
 		<h1>João da Silva</h1>
 		<nav>
