Organizando o diretorio e os arquivos css

--- a/bio.html
+++ b/bio.html
@@ -4,8 +4,8 @@
 	<title>Biografia - Joao da Silva</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="img/favicon.png">
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="bio.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/bio.css">
 	<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 	<!-- carrega a fonte Open Sans Condensed na versão negrito, -->
