Reformulando o site e reorganizando arquivos CSS

--- a/bio.html
+++ b/bio.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Biografia - Joao da Silva</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/bio.css">
 	<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
@@ -49,14 +51,15 @@
 			<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
 		</div>
 	</main>
-	<img src="img/eu.jpg" alt="Foto do Joao da Silva" class="foto-principal">
+	<img src="img/eu.png" alt="Foto do Joao da Silva" class="foto-principal">
 	<aside id="navegacao-site">
-		<h1>João da Silva</h1>
+		<h1>Victor Scher</h1>
 		<nav>
 			<ul class="menu-navegacao">
 				<li><a href="#">home</a></li>
-				<li><a href="#">portifilio</a></li>
+				<li><a href="portifolio.html">portifilio</a></li>
 				<li><a href="#">sobre mim</a></li>
+				<li><a href="blog.html">blog</a></li>
 				<li><a href="#">contato</a></li>
 			</ul>
 		</nav>
@@ -67,7 +70,7 @@
 		</ul>
 	</aside>
 	<footer id="rodape-pagina">
-		&copy; João da Silva 2018
+		&copy; Victor Scher 2018
 	</footer>
 </body>
 
