--- a/bio.html
+++ b/bio.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Biografia - Joao da Silva</title>
+	<title>Biografia - Victor Scher</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
